examples/test/testpolicy9784.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9784
  namespace: namespace341
spec:
  podSelector:
    matchLabels:
      key25: value37
      key14: value25
      key19: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value27
          key3: value30
      podSelector:
        matchLabels:
          key8: value7
